src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: Arial, Helvetica, sans-serif;
}

@layer base {
  :root {
    --background: 210 40% 96.1%;
    --foreground: 222.2 84% 4.9%;
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --primary: 0 72.2% 50.6%;
    --primary-foreground: 0 85.7% 97.3%;
    --secondary:214.3 31.8% 91.4%;
    --secondary-foreground: 0 0% 9%;
    --muted: 214.3 31.8% 91.4%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: 214.3 31.8% 91.4%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 72.2% 50.6%;
    --radius: 0.5rem;
    --chart-1: 217.2 91.2% 59.8%;
    --chart-2: 0 84.2% 60.2%;
    --chart-3: 173.4 80.4% 40%;
    --chart-4: 43.3 96.4% 56.3%;
    --chart-5: 292 91.4% 72.5%;
    --chart-6: 188.7 94.5% 42.7%;
    --chart-7: 24.6 95% 53.1%;
    --chart-8: 238.7 83.5% 66.7%;
    --chart-9:215.3 25% 26.7%;
    --chart-10: 330.4 81.2% 60.4%;
    --chart-11: 292.2 84.1% 60.6%;
    --chart-12: 270.7 91% 65.1%;
    --chart-13: 263.4 70% 50.4%;
    --chart-14: 243.4 75.4% 58.6%;
    --chart-15: 225.9 70.7% 40.2%;
    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
    --card: 222.2 47.4% 11.2%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 0 72.2% 50.6%;
    --primary-foreground: 0 85.7% 97.3%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 0 72.2% 50.6%;
    --chart-1: 217.2 91.2% 59.8%;
    --chart-2: 0 84.2% 60.2%;
    --chart-3: 173.4 80.4% 40%;
    --chart-4: 43.3 96.4% 56.3%;
    --chart-5: 292 91.4% 72.5%;
    --chart-6: 188.7 94.5% 42.7%;
    --chart-7:24.6 95% 53.1%;
    --chart-8: 238.7 83.5% 66.7%;
    --chart-9: 215.3 25% 26.7%;
    --chart-10: 330.4 81.2% 60.4%;
    --chart-11: 292.2 84.1% 60.6%;
    --chart-12: 270.7 91% 65.1%;
    --chart-13:263.4 70% 50.4%;
    --chart-14: 243.4 75.4% 58.6%;
    --chart-15: 225.9 70.7% 40.2%;
    --sidebar-background: 222.2 47.4% 11.2%;
    --sidebar-foreground: 210 40% 98%;
    --sidebar-primary: 224.3 76.3% 48%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 217.2 32.6% 17.5%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 217.2 32.6% 17.5%;
    --sidebar-ring: 215.3 25% 26.7%;
  }
}

@layer base {
  * {
    @apply border-border;
    scroll-behavior: smooth;
  }
  body {
    @apply bg-background text-foreground;
  }
}

